# llm_scheduling_management_system

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260509_001_initial_schema.py  20260509_002_runtime_schema_sync.py  20260618_003_mysql_utf8mb4_text.py
apps/api/: main.py
apps/worker/: __init__.py
config/: access.example.toml  app.example.toml  es.example.toml  llm.example.toml  mcp.example.toml  observability.example.toml  search.example.toml  source_registry.example.toml  storage.example.toml
docs/: 01-system-overview.md  02-workflow-execution-model.md  03-search-pipeline-design.md  04-llm-routing-and-provider-design.md  05-data-model-design.md  06-api-design.md  07-implementation-roadmap.md  08-liuzhou-earthquake-task-execution.md  09-user-facing-briefing-ui.md  10-briefing-standalone-build.md  11-search-provider-configuration.md  CHANGELOG.md  README.md  Untitled.md  briefing-standalone.html  es_mappings.json
docs/reports/: 2026-05-liuzhou-earthquake-report-run_e9bb4f83eae145edad3e86fe.md
scripts/: dev_export_task_bundle.py  dev_reset_db.py  dev_run_api.py  dev_run_worker.py  example_mcp_server.py  export_briefing_html.py  run_worker_service.py
tests/: conftest.py  test_access_control.py  test_config_loader.py  test_configuration_api.py  test_cors_api.py  test_database_unicode.py  test_elasticsearch_api.py  test_provider_adapters.py  test_provider_catalog_api.py  test_provider_factory.py  test_reports_api.py  test_source_registry.py  test_system_api.py  test_task_worker.py  test_tasks_api.py
(+72 files in other folders)
